<resources>
    <string name="app_name">TaxiDriver</string>


    <!--Do not change this in localization -->
    <string name="google_android_map_api_key">AIzaSyAlBu8MsC7jxJ68rpRR722Ojl_HQiWpnhQ</string>
    <string name="mapboxkey">pk.eyJ1IjoiaWNhbnN0dWRpb3oiLCJhIjoiY2oyMXQ3dGRpMDAwdDJ3bXpmZHRkdTBtNyJ9.PxslIcrVRj_gVgiv-Y-jog</string>

    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="drop_up_location">drop location</string>
    <string name="pick_up_location">pick up location</string>
    <string name="update">Update</string>
    <string name="online">you are online</string>
    <string name="offline">you are offline</string>
    <string name="coh_driver">Cash on your hand.</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="unpaid">UNPAID</string>
    <string name="network_not_available">Network is not available</string>
    <string name="try_again">Please try again!</string>
    <string name="error_occurred">error occurred</string>
    <string name="network">network is not available</string>
    <string name="add_vehicleinfo">Add Vehicle Information</string>
    <string name="upload_doc">Upload Document</string>
    <string name="home">Home</string>
    <string name="requests">Requests</string>
    <string name="vehicle_info">Vehicle Information</string>
    <string name="payment_history">Payment History</string>
    <string name="profile">Profile</string>
    <string name="success">Welcome to </string>
    <string name="fiels_is_required">field is required</string>
    <string name="email_invalid">email is invalid</string>
    <string name="mobile_invalid">mobile number is invalid</string>
    <string name="password_length">minimum password length is 6 characters</string>
    <string name="password_nomatch">password didn\'t match</string>
    <string name="ride_reuest_completed">ride request completed</string>
    <string name="ride_reuest_cancelled">ride request cancelled</string>
    <string name="accepted_request">Accepted Request</string>
    <string name="ccancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="ride_completion">RIDE COMPLETION</string>
    <string name="ride_cancellation">RIDE CANCELLATION</string>
    <string name="track_ride">Track Ride</string>
    <string name="passanger_info">Passenger Information</string>
    <string name="taxi">TAXI</string>
    <string name="pending_request">Pending Request</string>
    <string name="cancelled_request">Cancelled Request</string>
    <string name="completed_request">Completed Request</string>
    <string name="couldnt_get_location">couldn\'t get your location</string>
    <string name="direct_requesting">Direction Requesting...</string>
    <string name="profile_updated">Profile Updated</string>
    <string name="tryagian">try again</string>

    <string name="profile_uploaded">profile uploaded</string>
    <string name="change">CHANGE</string>
    <string name="newpwd_required">new password is required</string>
    <string name="password_updated">password Updated</string>
    <string name="ride_acceptance">RIDE ACCEPTANCE</string>
    <string name="ride_reuest_accepted">ride request accepted</string>
    <string name="accept_ride">ACCEPT RIDE</string>
    <string name="complete_ride">COMPLETE RIDE</string>
    <string name="cancel_ride">CANCEL RIDE</string>
    <string name="no_status">NO STATUS</string>
    <string name="basefare">"Base Fare       "</string>
    <string name="approve_payment_offline">APPROVE OFFLINE PAYMENT</string>
    <string name="vehicle">vehicle</string>
    <string name="doc">doc</string>
    <string name="go">go</string>
    <string name="invalid_location">Invalid location</string>
    <string name="ride_completion_msg">Do you want to complete your accepted ride?</string>
    <string name="ride_cancellation_msg">Do you want to cancel your accepted ride?</string>
    <string name="ride_acceptance_msg">Do you want to accpect ride?</string>

    <string name="re_login">re-login and try again</string>
    <string name="password_required">password is required</string>
    <string name="format_msg">jpg,png or gif is only accepted</string>
    <string name="doo">do</string>
    <string name="payment_receive_from_customer">Payment Received From Customer</string>
    <string name="customer_number">Customer Number</string>

    <string name="Pick_Customer">Pick Customer</string>
    <string name="Start_Ride">Start Ride</string>
    <string name="Ride_Started">Ride Started</string>
    <string name="log_out">Log out</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_an_account">Create an Account</string>
    <string name="total_rides">Total Rides</string>
    <string name="earnings">Earnings</string>
    <string name="today">Today</string>
    <string name="this_week">This Week</string>
    <string name="overall">Overall</string>
    <string name="payment_status">Payment Status</string>
    <string name="brand">BRAND</string>
    <string name="vehicle_no">VEHICLE NO</string>
    <string name="model">MODEL</string>
    <string name="year">YEAR</string>
    <string name="color">COLOR</string>
    <string name="continue_btn">CONTINUE</string>
    <string name="from">FROM</string>
    <string name="to">TO</string>
    <string name="date">DATE</string>
    <string name="customer_name">CUSTOMER NAME</string>
    <string name="new_password">New password</string>
    <string name="password_reset">Password Reset</string>
    <string name="registered_email">Enter your registered email address ,We will send you an email to reset your password</string>
    <string name="registered_email_input">Registered Email</string>
    <string name="reset_password">Reset password</string>
    <string name="ride_payment_detail">RIDE PAYMENT DETAIL</string>
    <string name="amount">Amount</string>
    <string name="distance">Distance</string>
    <string name="status">Status</string>
    <string name="date_amp_time"><![CDATA[Date & Time]]></string>
    <string name="driver_name">Driver Name</string>
    <string name="paypal_id">PAYPAL ID</string>
    <string name="dl">Please upload your drivinng licence</string>
    <string name="vi">Please upload your vehicle insurance</string>
    <string name="vp">Please upload your vehicle permit</string>
    <string name="vr">Please upload your vehicle registration</string>
    <string name="passanger_vehicle">Passanger Vehicle</string>
    <string name="ride_complete_msg">Complete</string>
    <string name="ride_cancel_msg">Cancel</string>
    <string name="ride_accept_msg">Accept</string>
    <string name="Choose_pickup">Choose Pickup</string>
    <string name="ten_ton">10 Ton Truck</string>
    <string name="five_ton">5 Ton Truck</string>
    <string name="small">Small Pickup</string>
    <string name="pickup">Pickup</string>
    <string name="Choose_Language">Choose Language</string>
    <string name="English">English</string>
    <string name="Arabic">Arabic</string>
    <string name="car_type">Select Car</string>
    <string name="Taxi">Taxi</string>
    <string name="Economy">Economy</string>
    <string name="Sedan">Sedan</string>
    <string name="SUV">SUV</string>
    <string name="Pickup">Pickup</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cubetaxi">CUBETEXI\nDRIVER</string>
    <string name="accept">ACCEPT</string>
    <string name="decline">DECLINE</string>
    <string name="ride_request_basic">Ride Request (Basics)</string>
    <string name="pickup_location">PICKUP LOCATION</string>
    <string name="multiline">B,408 Mondeal Square,Opp Honest Hotel Nr\n prahladnagar GardenSarkhej,-GandhiNagar Hwy,\nAhmedAbad,Gujrat 380015,India</string>
    <string name="destination">Destination Address</string>
    <string name="Thaltej">Thaltej Gam,Thaltej,AhmaedAbad,Gujrat,India</string>


</resources>
